--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,40 @@
-name: Generate Contribution Snake and GIF
-
 on:
-  push: # Trigger the workflow on every push to the repository
-
+  # run automatically every 24 hours
+  # Corn 0 */24 * * *
+  schedule:
+    - cron: "0 */24 * * *" 
+  
+  # allows to manually run the job at any time
+  workflow_dispatch:
+  
+  # run on every push on the master branch
+  push:
+    branches:
+      - master
+    
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Generate Snake and GIF
-        uses: Platane/snk@v3
+      # generates a snake game from a github user (TharakaMadushnakaWanshathilaka) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          # GitHub user name to read the contribution graph from (**required**)
-          # using action context var `github.repository_owner` or specified user
-          github_user_name: ${{ github.TharakaMadushankaWanshathilaka }}
-
-          # List of files to generate. One file per line. Each output can be customized with options as query string.
-          #
-          # Supported options:
-          # - palette: A preset of color, one of [github, github-dark, github-light]
-          # - color_snake: Color of the snake
-          # - color_dots: Comma-separated list of dots color.
-          #                The first one is 0 contribution, then it goes from the low contribution to the highest.
-          #                Exactly 5 colors are expected.
+          github_user_name: TharakaMadushnakaWanshathilaka
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          # A GitHub token is required to fetch the contribution calendar from the GitHub API
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
